--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     color: black;
     font-weight: 700;
     padding-top: 2%;
-    padding-left: 5%;
+    padding-left: 0%;
 
 }
 .extra{
@@ -73,7 +73,7 @@ footer{
     font-weight: 700;
     font-size: 40px;
     padding-top: 2%;
-    padding-left: 5%;
+    padding-left: 0%;
 }
 
 .row2{
@@ -86,4 +86,7 @@ text-align: center;
 .check{
     
     margin: 3% 45%   ;
+}
+.username{
+    height: 30px;
 }
